# onevideo

./: .gitignore  AUTHORS  Doxyfile  Makefile.am  README  README.txt  TODO.txt  configure.ac  debug-one-video-app.sh  debug-one-video-cli.sh  debug-one-video-gui.sh  export-path.sh  memcheck-one-video-app.sh  memcheck-one-video-cli.sh  memcheck-one-video-gui.sh  one-video-app.sh  one-video-cli.sh  one-video-gui.sh
OneVideo.xcworkspace/: contents.xcworkspacedata
OneVideo.xcworkspace/xcuserdata/jhg.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/OneVideo.xcworkspace/: contents.xcworkspacedata
Xcode/one-video-cli/one-video-cli.xcodeproj/: project.pbxproj
Xcode/one-video-cli/one-video-cli.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode/one-video-cli/one-video-cli.xcodeproj/project.xcworkspace/xcuserdata/jhg.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/one-video-cli/one-video-cli.xcodeproj/xcuserdata/jhg.xcuserdatad/xcschemes/: gstproxy.xcscheme  one-video-cli.xcscheme  one-video-gui.xcscheme  onevideo.xcscheme  xcschememanagement.plist
app/: main.c
cli/: main.c
gst/proxy/: gstproxy.c  gstproxysink-priv.h  gstproxysink.c  gstproxysrc.c
gui/: .gitignore  ovg-app.c  ovg-app.h  ovg-appmenu.ui  ovg-appwin.c  ovg-appwin.h  ovg-main.c  ovg-window.ui  ovg.gresource.xml
lib/: comms.c  comms.h  discovery.c  discovery.h  incoming.c  incoming.h  lib-priv.h  lib-setup.c  lib-setup.h  lib.c  lib.h  outgoing.c  outgoing.h  utils.c  utils.h
onevideo/: comms.c  comms.h  discovery.c  discovery.h  incoming.c  incoming.h  lib-priv.h  lib-setup.c  lib-setup.h  lib.c  lib.h  outgoing.c  outgoing.h  ov-discovered-peer.c  ov-discovered-peer.h  ov-local-peer-audio-processing.cc  ov-local-peer-audio-processing.h  ov-local-peer-audio.c  ov-local-peer-audio.h  ov-local-peer-priv.h  ov-local-peer-setup.c  ov-local-peer-setup.h  ov-local-peer-webrtc-aec.cpp  ov-local-peer-webrtc-aec.h  ov-local-peer.c  ov-local-peer.h  ov-peer.c  ov-peer.h  ov-remote-peer.h  utils.c  utils.h
patches/gst-plugins-good/: 0001-rtpjpegdepay-Don-t-send-invalid-frames-downstream-af.patch  0001-v4l2-Add-the-device-and-sysfs-paths-to-the-GstDevice.patch
src/: Makefile.am  lib.c  lib.h  main.c
tests/: README  audio-processing-test.c
tests/scripts/: simulate-packetloss.sh
tests/supp/: gst.supp
wrappers/: debug-one-video-wrapper.sh  memcheck-one-video-wrapper.sh  one-video-wrapper.sh  setup.sh
